cmake_minimum_required(VERSION 2.8)
project( CXX)
set(CMAKE_CXX_COMPILER g++-4.8)
add_definitions(-std=c++11 -D_GNU_SOURCE -DLINUX -DAMD64 -m64 -fPIC -DSIZEOF_VOID_P=8 -DSESI_LITTLE_ENDIAN -DENABLE_THREADS -DUSE_PTHREADS -D_REENTRANT -D_FILE_OFFSET_BITS=64 -c -DGCC4 -DGCC3 -Wno-deprecated)
INCLUDE_DIRECTORIES($ENV{HFS}/toolkit/include)
LINK_DIRECTORIES($ENV{HFS}/dsolib)
add_library(${PROJECT_NAME} SHARED "jsonvex.cpp")
target_link_libraries(${PROJECT_NAME} HoudiniUT HoudiniGEO)
install(TARGETS ${PROJECT_NAME} DESTINATION "~/houdini16.0/vex/")
